@@ -18,3 +18,4 @@ y2038/time64.c
 y2038/time64.h
 y2038/time64_config.h.in
 y2038/time64_limits.h.in
+SIGNATURE    Added here by Module::Build
