@@ -1,0 +1,43 @@
+This file contains message digests of all files listed in MANIFEST,
+signed via the Module::Signature module, version 0.61.
+
+To verify the content in this distribution, first make sure you have
+Module::Signature installed, then type:
+
+    % cpansign -v
+
+It will check each file's integrity, as well as the signature's
+validity.  If "==> Signature verified OK! <==" is not displayed,
+the distribution may already have been compromised, and you should
+not run its Makefile.PL or Build.PL.
+
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+SHA1 4d4b9fe7a9836ea619fbc68874efa7d7e6d60cd2 Build.PL
+SHA1 7fc8ff8b68e2ff595276f9ca114043983cf06464 Changes
+SHA1 fb110d0098fa623a2d6566e86a6d630110f60d23 INSTALL
+SHA1 0abcc59e081d5fa311e6b18c24f94a4f0a3d47b9 MANIFEST
+SHA1 b42c7cde42d44221603a84f6bdfeb4a6005604e5 MANIFEST.SKIP
+SHA1 6a1751990aa55a3de61263b38f8ffa092f30d804 META.yml
+SHA1 d2f3d11e9f7f0fd886b47f9257352eb8b71bf4a8 check_max.c
+SHA1 f952a76c3122bcb434c86e606583b11fd1bd3f4a inc/Local/Module/Build.pm
+SHA1 7b2d1ad8534364e86a32e38f46d8bf642bce4cae lib/Time/y2038.pm
+SHA1 666e25e498a3bd6bdb9bcab3f9e5b8812e4567f3 lib/Time/y2038.xs
+SHA1 644a9999fe2b2628be6825c527f75b2205b2a0b8 lib/Time/y2038/Everywhere.pm
+SHA1 6c52173a196e81890474ea47f31ba2aeb3b7939c munge_config
+SHA1 1fa62ec9022c346fa26bf94652114e38b5efc5f0 t/everywhere.t
+SHA1 53f53a00f22f19b5f16d7801e730e57c173f61c7 t/time.t
+SHA1 0f7a96de5a04d9326e963cb480a50ebf783c5b2c t/timegm.t
+SHA1 a915486e0da8713dead77ca21d041c8ae6b6676e typemap
+SHA1 3c5ee25d8c61ba2812a3421c70c5c7a0e174323d y2038/time64.c
+SHA1 0d7cf54304f41d3dbfd803d597c29d62b845ce2a y2038/time64.h
+SHA1 015c751b69ae7971c626034ad2b27eaabe5a76a7 y2038/time64_config.h.in
+SHA1 0f73eae859e4709f30194d5e989487ffa7fd28d2 y2038/time64_limits.h.in
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (Darwin)
+
+iEYEARECAAYFAkuENHkACgkQWMohlhD1QyfiTQCaA6j2aFkp8iBQmVOtyzhYyUTD
+XDUAniSuijqn+QGhg+v+ML+CuqPox/fu
+=wJZc
+-----END PGP SIGNATURE-----
