@@ -1,3 +1,8 @@
+20100223  Tue Feb 23 11:57:23 PST 2010
+  Build
+  * Fix for JSON.pm not being available for Build.PL
+
+
 20100218  Thu Feb 18 12:29:49 PST 2010
   * No changes since the last alpha
 
